[tool.poetry]
name = "yippi"
version = "0.1.1"
description = "An (a)sync e621 API wrapper for Python."
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.23.0"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-recording = "^0.11.0"
pytest-asyncio = "^0.12.0"
vcrpy = "^4.1.1"
docutils = "^0.16"
flake8 = "^3.8.2"
readme-renderer = "^29.0"
pygments = "^2.8.0"
isort = "^4.3.21"
black = "^20.8b1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
