[tool.poetry]
name = "yippi"
version = "0.2.0.1"
description = "An (a)sync e621 API wrapper for Python."
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]
license = "LGPL-3.0-only"
readme = "README.rst"
documentation = "https://yippi.readthedocs.io/"
repository = "https://github.com/rorre/Yippi"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.23.0"
aiohttp = "^3.6.2"
pyrate-limiter = "^2.3.4"
Sphinx = {version = ">=4.0.2,<6.0.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^0.5.2", extras = ["docs"]}
sphinxcontrib-napoleon = {version = "^0.7", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-recording = "^0.11.0"
pytest-asyncio = "^0.14.0"
vcrpy = "^4.1.1"
docutils = "^0.16"
flake8 = "^3.8.2"
readme-renderer = "^29.0"
pygments = "^2.8.0"
isort = "^5.7.0"
black = "^22.6.0"
pytest-cov = "^2.11.1"
mypy = "^0.971"
types-requests = "^2.28.4"
tox = "^3.25.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
